# KB2025

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  转发鼠标逻辑.docx
cursor_dongle/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
cursor_dongle/main/: CMakeLists.txt  app_main.c  app_udp_server.c  app_udp_server.h  idf_component.yml  settings.c  settings.h
cursor_dongle/main/tusb_hid/: app_tusb_hid.c  app_tusb_hid.h
gbk_table/: oem2uni.py  readme.md  uni2oem.py
main/: CMakeLists.txt  idf_component.yml  keyboard_main.c  settings.c  settings.h
main/app_audio/: app_audio.c  app_audio.h  app_sr.c  app_sr.h
main/app_espnow/: app_espnow.c  app_espnow.h
main/app_led/: app_led.c  app_led.h
main/app_uart/: app_uart.c  app_uart.h
main/app_udp_client/: app_udp_client.c  app_udp_client.h
main/app_wifi/: app_wifi.c  app_wifi.h
main/baidu_api/: baidu_api.h  baidu_asr.c  baidu_token.c  baidu_tts.c  json_utils.c  json_utils.h
main/ble_hid/: app_ble_hid.c  app_ble_hid.h  esp_hidd_prf_api.c  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
main/chatgpt_api/: chatgpt_api.c  chatgpt_api.h
main/gbk2utf2uni/: GBK.c  gbk2utf2uni.c  gbk2utf2uni.h
main/keyboard/: function_keys.c  function_keys.h  keyboard.c  keyboard.h
main/keyboard_bsp/: bsp_74hc165.c  bsp_74hc165.h  bsp_audio.c  bsp_audio.h  bsp_keyboard.c  bsp_keyboard.h  bsp_power.c  bsp_power.h  bsp_rocker.c  bsp_rocker.h  bsp_spiffs.c  bsp_spiffs.h
main/tusb_hid/: app_tusb_hid.c  app_tusb_hid.h
pc_app/: README.md  audio_processor.py  main.py  requirements.txt
